<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_relative_layout"
        android:onClick="abrirRelativeLayout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_frame_layout"
        android:onClick="abrirFrameLayout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_absolut_layout"
        android:onClick="abrirAbsolutLayout"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_table_layout"
        android:onClick="abrirTableLayout"/>


</LinearLayout>



